--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "description": "",
   "version": "0.0.0",
   "dependencies": {
-    "vue-router": "3.0.1",
-    "vue": "2.5.2"
+    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap-vue": "^1.4.1",
+    "font-awesome": "^4.7.0",
+    "vue": "2.5.2",
+    "vue-router": "3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -73,7 +76,7 @@
     "url-loader": "^0.5.8",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.3",
+    "vue-template-compiler": "2.5.2",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
